<resources>
    <string name="app_name">FridgeManager</string>
    <string name="welcome_text">Fridge Manager</string>
    <string name="fridge_button">Fridge</string>
    <string name="recipe_button">Recipes</string>
    <string name="grocery_button">Groceries</string>
    <string name="ingredient_button">Ingredients</string>
    <string name="placeholder"> </string>
    <string name="defaultBoughtDate">2018–08–06</string>
    <string name="defaultExpiryDate">2018–08–20</string>

    <!--Debugging-->
    <string name="connectionUrl">http://10.0.2.2:3000</string>

    <!--Server-->
    <!--<string name="connectionURL"></string>-->

</resources>