<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.MainActivity">


    <TextView
        android:id="@+id/fridge_manager_title_main"
        android:layout_width="325dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="52dp"
        android:fontFamily="@font/open_sans_light"
        android:text="@string/welcome_text"
        android:textSize="46sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/fridge_groceries_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/recipes_ingredients_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/go_to_fridge_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="55dp"
            android:layout_weight="1"
            android:background="#4e51ee"
            android:onClick="goToFridge"
            android:text="@string/fridge_button" />

        <Button
            android:id="@+id/go_to_groceries_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="1"
            android:background="#4143c7"
            android:onClick="goToGroceries"
            android:text="@string/grocery_button" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/recipes_ingredients_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.789">

        <Button
            android:id="@+id/go_to_recipes_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="55dp"
            android:layout_weight="1"
            android:background="#5e61f8"
            android:text="@string/recipe_button" />

        <Button
            android:id="@+id/go_to_ingredients_button"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginEnd="44dp"
            android:layout_weight="1"
            android:background="#474ae1"
            android:text="@string/ingredient_button" />
    </LinearLayout>

    <Button
        android:id="@+id/logout_main_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="Logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.866"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recipes_ingredients_layout" />

    <TextView
        android:id="@+id/welcome_user_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fridge_manager_title_main" />


</android.support.constraint.ConstraintLayout>